--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.3",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1"
   },
