Restructure Azure Functions for v4 compatibility
- Moved functions to src/functions/ directory
- Updated tsconfig to compile from src/
- Added main entry point to package.json
- Removed old function directories
- Functions now properly discovered by Azure Functions runtime

--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "painplus-api",
   "version": "1.0.0",
   "description": "Azure Functions API for PAin+ waitlist",
+  "main": "dist/src/functions/*.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
