--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "Azure Functions API for PAin+ waitlist",
   "main": "dist/src/functions/*.js",
   "engines": {
-    "node": ">=20.0.0"
+    "node": "20.x"
   },
   "scripts": {
     "build": "tsc",
